--- a/index.html
+++ b/index.html
@@ -274,15 +274,35 @@
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
-                    <img src="portfolio/js.jpg" alt="" />
+                    <img src="portfolio/RollingDise.PNG" alt="" />
                     <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                       <div class="portfolio-content">
                         <div class="portfolio-icon">
-                          <a class="image-popup" href="portfolio/js.jpg"><i class="lni lni-zoom-in"></i></a>
+                          <a class="image-popup" href="portfolio/RollingDise.PNG"><i class="lni lni-zoom-in"></i></a>
                           <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
                         </div>
                         <div class="portfolio-icon">
-                          <a href="#"><i class="lni lni-link"></i></a>
+                          <a href="https://ankita-web34.github.io/Rolling-Dice/index.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- single portfolio -->
+              </div>
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/secretNumber.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/secretNumber.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Secret-Number/"><i class="lni lni-link"></i></a>
                           <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
                         </div>
                       </div>
