--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 I've worked so far.
               </p>
             </div>
-            <!-- section title -->
           </div>
         </div>
+        <!-- section title -->
         <!-- row -->
         <div class="row">
           <div class="col-lg-3 col-md-3">
@@ -87,8 +87,8 @@
                 <li data-filter=".javascript">Javascript</li>
               </ul>
             </div>
-            <!-- portfolio menu -->
           </div>
+          <!-- portfolio menu -->
           <div class="col-lg-9 col-md-9">
             <div class="row no-gutters grid mt-50">
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
@@ -109,8 +109,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -129,8 +129,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -149,8 +149,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -169,8 +169,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -189,8 +189,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -209,8 +209,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -229,8 +229,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -249,8 +249,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -269,8 +269,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -289,8 +289,8 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -309,8 +309,28 @@
                     </div>
                   </div>
                 </div>
-                <!-- single portfolio -->
               </div>
+              <!-- single portfolio -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/backist-project.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/backist-project.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Bankist-Project/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- single portfolio -->
             </div>
             <!-- row -->
           </div>
@@ -347,7 +367,6 @@
                 marginwidth="0"
               ></iframe>
             </div>
-            <!-- row -->
           </div>
         </div>
         <!-- row -->
@@ -362,7 +381,6 @@
                   <p class="text">32,Indra Vihar<br />306401.</p>
                 </div>
               </div>
-              <!-- single contact info -->
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="single-contact-info contact-color-2 mt-30 d-flex">
