--- a/index.html
+++ b/index.html
@@ -331,6 +331,26 @@
                 </div>
               </div>
               <!-- single portfolio -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/forkify-img.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/forkify-img.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/forkify/index.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- single portfolio -->
             </div>
             <!-- row -->
           </div>
