create react option and overly's width in css

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <li data-filter=".htmlcss">HTML & CSS</li>
                 <li data-filter=".bootstrap">Bootstrap</li>
                 <li data-filter=".javascript">Javascript</li>
+                <li data-filter=".react">React</li>
               </ul>
             </div>
           </div>
@@ -343,6 +344,26 @@
                         </div>
                         <div class="portfolio-icon">
                           <a href="https://ankita-web34.github.io/forkify/index.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- single portfolio -->
+              <div class="col-lg-4 col-sm-6 react">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/js.jpg" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/js.jpg"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="#"><i class="lni lni-link"></i></a>
                           <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
                         </div>
                       </div>
