--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </ul>
             </div>
           </div>
-          <!-- portfolio menu -->
+          <!-- Book-store -->
           <div class="col-lg-9 col-md-9">
             <div class="row no-gutters grid mt-50">
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
@@ -103,7 +103,7 @@
                           <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
                         </div>
                         <div class="portfolio-icon">
-                          <a href="https://ankita-web34.github.io/photoX/"><i class="lni lni-link"></i></a>
+                          <a href="https://ankita-web34.github.io/Book-library/"><i class="lni lni-link"></i></a>
                           <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
                         </div>
                       </div>
@@ -111,7 +111,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- Admin-dashboard -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -131,7 +131,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- pure bootstrap -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -151,7 +151,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- photX -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -171,7 +171,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- nexter -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -191,7 +191,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- trillo -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -211,7 +211,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- natours -->
               <div class="col-lg-4 col-sm-6 htmlcss">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -231,7 +231,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- omnifood -->
               <div class="col-lg-4 col-sm-6 htmlcss">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -251,7 +251,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- Aurora grove -->
               <div class="col-lg-4 col-sm-6 htmlcss bootstrap">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -271,7 +271,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- rolling dise -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -291,7 +291,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- secrate number -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -311,7 +311,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- bankist project -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -331,7 +331,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- forkify -->
               <div class="col-lg-4 col-sm-6 javascript">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -351,7 +351,7 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- react project cooming soon -->
               <div class="col-lg-4 col-sm-6 react">
                 <div class="single-portfolio">
                   <div class="portfolio-image">
@@ -371,7 +371,208 @@
                   </div>
                 </div>
               </div>
-              <!-- single portfolio -->
+              <!-- drum kits -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/drum-kit.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/drum-kit.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Drum-kit/index-START.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- play with image -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/blur.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/blur.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Play-with-image/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- search city and state -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/search city.PNG" alt="" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/search city.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Search-city/index-START.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Quotes_generator -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="./portfolio/quotesImage.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="./portfolio/quotesImage.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Quote-Generator/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Infinity-scroll -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="./portfolio/infinity-scroll.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="./portfolio/infinity-scroll.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Infinity-Scroll/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Picture-in-picture -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/p-in-p.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/p-in-p.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/picture-in-picture/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- joke teller -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/joke-teller.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/joke-teller.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Joke-teller-/index.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- darkLight mode -->
+              <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/LightDark.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/LightDark.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Light-Dark-Mode/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- single portfolio animated template, navigation template, music player, countdowan -->
+               <!-- Bookmarks App -->
+               <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/bookmarks-Keeper.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/bookmarks-Keeper.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Bookmark-Keeper/index.html"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+               <!-- video-payer2 -->
+               <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/video-player2.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/video-player2.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://ankita-web34.github.io/Custom-Video-Player/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+               <!-- new new -->
             </div>
             <!-- row -->
           </div>
@@ -433,8 +634,8 @@
                   <p class="text">ankitachanal34@gmail.com</p>
                 </div>
               </div>
-              <!-- single contact info -->
             </div>
+            <!-- single contact info -->
             <div class="col-lg-4 col-md-6">
               <div class="single-contact-info contact-color-3 mt-30 d-flex">
                 <div class="contact-info-icon">
@@ -445,11 +646,12 @@
                   <p class="text">7357373459</p>
                 </div>
               </div>
-              <!-- single contact info -->
             </div>
           </div>
-          <!-- row -->
+          <!-- single contact info -->
         </div>
+        <!-- row -->
+
         <!-- contact info -->
         <!-- <div class="row">
           <div class="col-lg-12">
