--- a/index.html
+++ b/index.html
@@ -573,6 +573,25 @@
                 </div>
               </div>
                <!-- new new -->
+               <div class="col-lg-4 col-sm-6 javascript">
+                <div class="single-portfolio">
+                  <div class="portfolio-image">
+                    <img src="portfolio/clothing-hub.PNG" alt="pic" />
+                    <div class="portfolio-overlay d-flex align-items-center justify-content-center">
+                      <div class="portfolio-content">
+                        <div class="portfolio-icon">
+                          <a class="image-popup" href="portfolio/clothing-hub.PNG"><i class="lni lni-zoom-in"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                        <div class="portfolio-icon">
+                          <a href="https://node-react-live.herokuapp.com/"><i class="lni lni-link"></i></a>
+                          <img src="assets/images/portfolio/shape.svg" alt="shape" class="shape" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <!-- row -->
           </div>
